--- a/app/components/Search/Card/index.module.css
+++ b/app/components/Search/Card/index.module.css
@@ -4,7 +4,6 @@
   gap: 35px;
   padding: 10px 30px;
   width: 100%;
-  /*margin-top: 105px;*/
 }
 .card {
   background: #ffffff;
@@ -173,6 +172,11 @@
     gap: 10px;
   }
 }
+@media (max-width: 768px) {
+  .cards{
+    margin-top: 200px;
+  }
+}  
 @media (max-width: 480px) {
   .price {
     font-size: 16px;
