--- a/app/components/Search/CategorySection/index.module.css
+++ b/app/components/Search/CategorySection/index.module.css
@@ -11,7 +11,7 @@
 .filters h3 {
   font-size: 21px;
   font-weight: bold;
-  margin: 15px 30px 30px 0px;
+  margin: 0px 30px 30px 0px;
   color: #555;;
   text-align:left;
 }  
